Nuovo possesso di stupefacenti
- Cambiato completamente il sistema di gestione del reato di possesso di stupefacenti, ora non ci saranno più distinzioni di categoria e il programma farà il calcolo in automatico
- Refactoring generale e ottimizzazioni
- Rimossi import non utilizzati
- Aggiunta la possibilità, all'interno dei metodi dell'interfaccia Injector.java, di sapere se si sta lavorando con una multa o con un arresto
- Eliminato il messaggio "Rimuovere dai ricercati", spesso inutile e poco funzionale
- Version dump