@@ -1,12 +1,36 @@
 package it.signorpollito.crime.injectors;
 
+import it.signorpollito.crime.Crime;
+import it.signorpollito.crime.injectors.classes.DrugCategory;
 import it.signorpollito.utils.InputUtils;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Scanner;
 
 public class DrugInjector implements Injector {
+    private static final List<DrugCategory> CATEGORIES = new ArrayList<>();
+
+    static {
+        CATEGORIES.add(new DrugCategory(1, 0, 0, 10));
+        CATEGORIES.add(new DrugCategory(2, 6, 11, 32));
+        CATEGORIES.add(new DrugCategory(3, 12, 33, 127));
+        CATEGORIES.add(new DrugCategory(4, 24, 128, Integer.MAX_VALUE));
+    }
+
+    public static DrugCategory getCategory(int amount) {
+        for(var category : CATEGORIES)
+            if(category.isInRange(amount))
+                return category;
+
+        throw new IllegalArgumentException("Amount not valid!");
+    }
+
+
+
     private int drugAmount = 0;
     private int seedsAmount = 0;
+    private DrugCategory category;
     private boolean hided;
 
     @Override
@@ -14,6 +38,8 @@ public class DrugInjector implements Injector {
         drugAmount = InputUtils.requestInteger(scanner, "Quanti pezzi di droga? ", 0);
         seedsAmount = InputUtils.requestInteger(scanner, "Quanti semi di droga? ", 0);
         hided = InputUtils.requestYes(scanner, "Ha occultato? (y/n) ");
+
+        category = getCategory(drugAmount + seedsAmount);
     }
 
     private int calculateFinalCharge() {
@@ -21,36 +47,41 @@ public class DrugInjector implements Injector {
     }
 
     @Override
-    public String getModifiedDisplayName(String name) {
-        return "Possesso di stupefacenti".concat(hided ? " e Art.150-bis del C.P." : "");
+    public String getModifiedDisplayName(String name, Crime.Type crimeType) {
+        return crimeType==Crime.Type.CHARGE || drugAmount<=10 ?
+                "Art. 150-bis del C.P." :
+                "Possesso di stupefacenti".concat(hided ? " e Art. 150-bis del C.P." : "");
     }
 
     @Override
-    public String getArrestCommandName(String name) {
-        return "Possesso di stupefacenti (Catg. %s)".formatted(name.split(" ")[3])
-                .concat(hided ? " + Art.150-bis" : "");
+    public String getCommandName(String name, Crime.Type crimeType) {
+        name = "Possesso di stupefacenti (Catg. %d) (%dpz"
+                .concat(seedsAmount<=0 ? ")" : String.format(", %dsemi)", seedsAmount))
+                .formatted(category.category(), drugAmount);
+
+        if(crimeType==Crime.Type.CHARGE)
+            return name;
+
+        return category.isCategory(1) ? "Art.150-bis" : name.concat(hided ? " + Art.150-bis" : "");
     }
 
     @Override
     public int getFinalHours(int hours) {
-        int amount = drugAmount+seedsAmount;
-        return (amount>127 ? hours*(amount/128) : hours) + (hided ? 5 : 0);
+        return  category.hours()
+                * (category.isCategory(4) ? ((drugAmount+seedsAmount)/128) : 1)
+                + (hided ? 5 : 0);
     }
 
     @Override
     public int getFinalBail(int bail) {
-        int total = drugAmount+seedsAmount;
-        if(total>127) return 0;
+        if(category.isCategory(4)) return 0;
 
         int hidedPlus = hided ? 3500 : 0;
-        return total<=10 ? hidedPlus : calculateFinalCharge() + hidedPlus;
+        return category.isCategory(1) ? hidedPlus : calculateFinalCharge() + hidedPlus;
     }
 
     @Override
     public int getFinalCharge(int charge) {
-        if(drugAmount+seedsAmount>10)
-            return 0;
-
-        return calculateFinalCharge();
+        return category.isCategory(1) ? calculateFinalCharge() : 0;
     }
 }
